infrastructure/k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: doe25-group-4
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web
  type: ClusterIP
